# project-a-assistant

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
k8s/: deployment.yaml
src/project_a_assistant/: __init__.py  config.py  graph.py  llm_client.py  utils.py
src/project_a_assistant/agent/: assistant.py  state.py
src/project_a_assistant/agent/nodes/: core_agent_node.py  gatekeeper_node.py  load_memories_node.py  next_steps_node.py  refuse_node.py
src/project_a_assistant/api/: __init__.py  conversation.py
src/project_a_assistant/bench/: bench_tools.py
src/project_a_assistant/llm/: llm_client.py
src/project_a_assistant/memory/: longterm_memory.py
src/project_a_assistant/prompts/: __init__.py  assistant_system.txt  gatekeeper.txt  next_steps.txt  tool_router.txt
src/project_a_assistant/tools/: context_search.py  mcp_client.py  memory_tool.py  projecta_mcp_adapter.py  web_search.py
src/project_a_assistant/validators/: gatekeeper.py
src/project_a_assistant/vectorstore/: vectorstore.py
src/tests/: test_assistant.py  test_gatekeeper.py  test_graph.py  test_route_tools.py  test_utils.py
